<resources>
    <string name="app_name">UploadFirebase</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save_image">Save image</string>
    <string name="view_image">View image</string>
    <string name="image_message">image message</string>
    <string name="loaded_image">loaded image</string>
    <string name="your_login_is">Your login.. is</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="empty_image">empty image</string>
    <string name="display_user_image">display user image</string>
    <string name="location_service">Location service</string>
    <string name="title_activity_view_location">ViewLocationActivity</string>
    <string name="update">Update</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="zero_3_decimal">0.000</string>
    <string name="null_str">null</string>
    <string name="provider">Provider</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="bearing">Bearing</string>
    <string name="speed">Speed</string>
    <string name="title_activity_random">RandomActivity</string>
    <string name="random">Random</string>
</resources>
